# hand-gesture-recognition-mediapipe

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SEQUENCE_TWO_HAND_RUNBOOK.md  TRAIN_YOUR_OWN_GESTURES.md  app.py  collect_two_hand_sequence_data.py  implementation.md  keypoint_classification.ipynb  keypoint_classification_EN.ipynb  keypoint_classification_EN_trained.ipynb  manage_two_hand_sequence_signs.py  pyproject.toml  train_keypoint_classifier.py  train_two_hand_sequence_classifier.py  two_hand_sequence_classifier.py
model/keypoint_classifier/: keypoint.csv  keypoint_classifier.keras  keypoint_classifier.py  keypoint_classifier.tflite  keypoint_classifier_label.csv
model/point_history_classifier/: point_history_classifier_label.csv
