[project]
name = "hand-gesture-recognition-mediapipe"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.31",
    "nbconvert>=7.16.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
]
